fixed n+1 queries for places and wingsuits show actions

--- a/app/views/tracks/_table_header.html.haml
+++ b/app/views/tracks/_table_header.html.haml
@@ -13,13 +13,13 @@
   .th=t 'activerecord.attributes.track.comment'
   .th.result-head.text-right
     =t 'disciplines.distance'
-    =tracks_sort_header(order_field, order_direction, 'distance_result', 'Distance')
+    =tracks_sort_header(order_field, order_direction, 'distance', 'Distance')
   .th.result-head.text-right
     =t 'disciplines.speed'
-    =tracks_sort_header(order_field, order_direction, 'speed_result', 'Speed')
+    =tracks_sort_header(order_field, order_direction, 'speed', 'Speed')
   .th.result-head.text-right
     =t 'disciplines.time'
-    =tracks_sort_header(order_field, order_direction, 'time_result', 'Time')
+    =tracks_sort_header(order_field, order_direction, 'time', 'Time')
   .th
     =t 'activerecord.attributes.track.recorded_at'
     =tracks_sort_header(order_field, order_direction, 'recorded_at', 'Recorded at')
