--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -30,38 +30,27 @@
               %img.img-50{src: pilot.userpic.url(:thumb), 'data-toggle' => 'tooltip', title: pilot.name}
       %hr
 
-    %table.table.table-hover.top-buffer
-      %thead
-        %tr
-          %th=t 'activerecord.attributes.track.id'
-          %th=t 'activerecord.attributes.track.name'
-          %th=t 'activerecord.attributes.track.suit'
-          %th.text-right= t('disciplinse.distance')
-          %th.text-right= t('disciplinse.speed')
-          %th.text-right= t('disciplinse.time')
-          %th=t 'activerecord.attributes.track.comment'
-          %th.text-center=t 'activerecord.attributes.track.recorded_at'
-          %th
-      %tbody
-        - @place.tracks.accessible_by(current_user).each do |track|
-          %tr.clickableRow{data: {url: track_path(id: track.id)}}
-            %td= track.id
-            %td= track_pilot(track)
-            %td
-              - if track.wingsuit
-                = suit_presentation(track.wingsuit)
-              - else 
-                %span.text-info
-                = track.suit
-            %td.text-right
-              %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.distance)}
-                = track.distance.result.to_i if track.distance
-            %td.text-right
-              %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.speed)}
-                = track.speed.result.to_i if track.speed
-            %td.text-right
-              %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.time)}
-                = track.time.result if track.time
-            %td.text-muted= track.comment
-            %td.text-center= track.created_at.strftime('%d.%m.%Y')
-            %td= track_icons(track)
+    #tracks-table.table.table-hover
+      .thead
+        .tr
+          .th
+            =t 'activerecord.attributes.track.id'
+          .th=t 'activerecord.attributes.track.name'
+          .th=t 'activerecord.attributes.track.suit'
+          .th=t 'activerecord.attributes.track.comment'
+          .th.result-head.text-right
+            =t 'disciplines.distance'
+          .th.result-head.text-right
+            =t 'disciplines.speed'
+          .th.result-head.text-right
+            =t 'disciplines.time'
+          .th
+            =t 'activerecord.attributes.track.recorded_at'
+          .th
+
+      .tbody
+        = render @tracks, except_columns: [:place]
+
+  .text-center.top-buffer
+    .pagination-list
+      = will_paginate @tracks, renderer: BootstrapPagination::Rails
