maps: wind cancellation based on place conditions. Minor refactorings

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,6 +21,7 @@
       var I18n = I18n || {};
       I18n.defaultLocale = "#{I18n.default_locale}"
       I18n.locale = "#{I18n.locale}"
+      MAPS_API_KEY = "#{ENV['MAPS_API_KEY']}"
     #wrap
       = render 'layouts/header'
 
