--- a/app/views/weather_data/_form_validation.js.erb
+++ b/app/views/weather_data/_form_validation.js.erb
@@ -1,4 +1,5 @@
 $("#<%= dom_id(@weather_datum) %>").validate({
+  ingonre: 'hidden',
   rules: {
     'weather_datum[actual_on]': {
       required: true
