--- a/app/views/weather_data/_table.html.haml
+++ b/app/views/weather_data/_table.html.haml
@@ -1,13 +1,17 @@
+- editable ||= 't'
+- except_columns ||= []
+
 #weather-table.table
   .thead
     .tr
-      .th= t('weather_datum.actual_on')
+      - unless except_columns.include? :actual_on
+        .th= t('weather_datum.actual_on')
       .th.text-right= t('weather_datum.altitude')
       .th.text-right= t('weather_datum.wind_speed')
       .th.text-right= t('weather_datum.wind_direction')
       .th
 
   .tbody
-    = render @weather_data
-    - if can? :create, WeatherDatum
-      = render 'form_row'
+    = render weather_data, editable: editable, except_columns: except_columns
+    - if can?(:create, WeatherDatum) && editable == 't'
+      = render 'form_row', except_columns: except_columns
