implemented weather data form

--- a/app/views/weather_data/_form_row.html.haml
+++ b/app/views/weather_data/_form_row.html.haml
@@ -1,3 +1,5 @@
+- except_columns ||= []
+
 = form_for [@weather_datumable, @weather_datum],
            remote: true,
            html: {class: 'tr', id: dom_id(@weather_datum) } do |f|
