--- a/app/views/weather_data/edit.js.erb
+++ b/app/views/weather_data/edit.js.erb
@@ -1,3 +1,7 @@
-$("#<%= dom_id(@weather_datum) %>").replaceWith("<%= j render('form_row') %>");
+$("#<%= dom_id(@weather_datum) %>").replaceWith(
+  "<%= j render('form_row',
+                 except_columns: @weather_data.hidden_columns,
+                 start_time: @weather_data.start_time) %>"
+);
 
 <%= render 'form_validation' %>
