--- a/app/views/weather_data/update.js.erb
+++ b/app/views/weather_data/update.js.erb
@@ -1,1 +1,2 @@
-$("#<%= dom_id(@weather_datum)%>").replaceWith("<%= j render(@weather_datum) %>");
+<%= render template: 'weather_data/index' %>
+$('a[data-toggle=tab][data-editable=true]').tab('show');
