--- a/app/views/weather_data/_index_modal.html.haml
+++ b/app/views/weather_data/_index_modal.html.haml
@@ -19,25 +19,18 @@
                 = "#{t('weather_datum.altitude_units')}: #{t('units.' + @view_units[:altitude])}"
                 %i.fa.fa-caret-down
             %ul.dropdown-menu{role: 'menu'}
-              %li{class: ('active' if @view_units[:altitude] == 'm')}
-                = link_to t('units.m'), index_params.merge(altitude_unit: 'm'), remote: true
-              %li{class: ('active' if @view_units[:altitude] == 'ft')}
-                = link_to t('units.ft'), index_params.merge(altitude_unit: 'ft'), remote: true
+              - ['m', 'ft'].each do |unit|
+                %li{class: ('active' if @view_units[:altitude] == unit)}
+                  = link_to t("units.#{unit}"), polymorphic_path([@weather_datumable, :weather_data], index_params.merge(altitude_unit: unit)), remote: true
 
           .btn-group.btn-group-xs
             %button.btn.btn-default.wind-speed-units{'data-toggle' => 'dropdown'}
               %span= "#{t('weather_datum.wind_speed_units')}: #{t('units.' + @view_units[:wind_speed])}"
               %i.fa.fa-caret-down
             %ul.dropdown-menu{role: 'menu'}
-              %li{class: ('active' if @view_units[:wind_speed] == 'ms')}
-                = link_to t('units.ms'), index_params.merge(wind_speed_unit: 'ms'), remote: true
-              %li{class: ('active' if @view_units[:wind_speed] == 'knots')}
-                = link_to t('units.knots'), index_params.merge(wind_speed_unit: 'knots'), remote: true
-              %li{class: ('active' if @view_units[:wind_speed] == 'kmh')}
-                = link_to t('units.kmh'), index_params.merge(wind_speed_unit: 'kmh'), remote: true
-              %li{class: ('active' if @view_units[:wind_speed] == 'mph')}
-                = link_to t('units.mph'), index_params.merge(wind_speed_unit: 'mph'), remote: true
+              - ['ms', 'knots', 'kmh', 'mph'].each do |unit|
+                %li{class: ('active' if @view_units[:wind_speed] == unit)}
+                  = link_to t("units.#{unit}"), polymorphic_path([@weather_datumable, :weather_data], index_params.merge(wind_speed_unit: unit)), remote: true
 
     .modal-body
-      -# = render 'table'
       = render @weather_data
