--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -1,11 +1,10 @@
 - provide :title, @tournament.name
 
 .tournament-show
-  .container.top-buffer
-    %h1.light-header 
-      = @tournament.name
+  .container
+    = render 'tournaments/header'
 
-  .container-fluid
+  .container
     .content-block
       .row
         .col-lg-1
@@ -114,7 +113,6 @@
 
       - if can? :edit, @tournament
         .container
-          %a.btn.btn-default{href: tournament_competitors_path(@tournament.id)}= 'Competitors'
           %a.btn.btn-default{href: tournament_rounds_path(@tournament.id)}= 'Rounds'
           %a.btn.btn-default{href: tournament_matches_path(@tournament.id)}= 'Matches'
           -# %a.btn.btn-default{href: tournament_match_competitors_path}= 'Match competitors'
