--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -20,17 +20,17 @@
                   .tournament-spacer
               .tournament-match.text-right
                 .panel.panel-default
-                  %a.tournament-match-map.text-muted{'data-tournament-id' => @tournament.id, 'data-match-id' => match.id}
+                  = link_to tournament_match_map_path(@tournament, match), remote: true, class: 'tournament-match-map text-muted' do
                     %i.fa.fa-compass
                     Map
                   .panel-body.competitors-container
-                    - if match.tournament_match_competitors.count == 0
+                    - if match.slots.count == 0
                       - 2.times do
                         .tournament-competitor.row
                           .col-sm-9.col-md-8.text-left.text-muted
                             ?
                           .col-sm-3.col-md-4.text-right
-                    - match.tournament_match_competitors.each do |competitor|
+                    - match.slots.each do |competitor|
                       .tournament-competitor.row
                         .col-sm-9.text-left
                           - if match.gold_finals || match.bronze_finals
@@ -55,7 +55,7 @@
                             - else
                               = competitor.result
 
-                    - if match.tournament_match_competitors.count == 1
+                    - if match.slots.count == 1
                       .tournament-competitor.row
                         .col-sm-9.text-left.text-muted
                           ?
@@ -65,41 +65,6 @@
                   .tournament-spacer
 
       .container
-        - if @tournament.qualification_rounds.count > 0      
-
-          .row.top-buffer
-            .col-sm-12
-              %h2.light-header= 'Qualification'
-          .row
-            %table.table.qualification-table
-              %thead
-                %tr
-                  %td
-                    Rank
-                  %td
-                    Competitor
-                  %td
-                    Best result
-                  - @tournament.qualification_rounds.each do |round|
-                    %td= "Round #{round.order}"
-              %tbody
-                - qualification_results.each_with_index do |result, index|
-                  %tr
-                    %td= index + 1
-                    %td
-                      %a{href: profile_path(result[:profile_id])}
-                        = result[:name]
-                    %td= result[:best_result]
-                    - @tournament.qualification_rounds.each do |round|
-                      - round_result = result["round_#{round.order}"]
-                      - track_id = result["round_#{round.order}_track_id"]
-                      %td 
-                        - if track_id
-                          %a{href: track_path(track_id), data: {toggle: 'tooltip'}, title: t('.show_details')}
-                            = round_result
-                        - else
-                          = round_result
-
         - unless @tournament.sponsors.empty?
           .row.top-buffer
             .col-md-12
@@ -115,5 +80,4 @@
         .container
           %a.btn.btn-default{href: tournament_rounds_path(@tournament.id)}= 'Rounds'
           %a.btn.btn-default{href: tournament_matches_path(@tournament.id)}= 'Matches'
-          -# %a.btn.btn-default{href: tournament_match_competitors_path}= 'Match competitors'
 
