--- a/app/views/events/rounds/maps/show.js.erb
+++ b/app/views/events/rounds/maps/show.js.erb
@@ -1,4 +1,4 @@
-$('#modal').html('<%= j render('index_modal') %>');
+$('#modal').html('<%= j render('show_modal') %>');
 $('#modal').modal('show');
 
 new Skyderby.views.RoundMapView({
