implemented base of round globe

--- a/app/views/events/scoreboards/_speed_distance_time.html.haml
+++ b/app/views/events/scoreboards/_speed_distance_time.html.haml
@@ -24,6 +24,8 @@
               = round.name
               = link_to event_round_map_path(@event, round), remote: true, class: 'round-map-view' do
                 %i.fa.fa-compass
+              = link_to event_round_globe_path(@event, round), remote: true, class: 'round-map-view' do
+                %i.fa.fa-compass
               - if can? :update, @event
                 = button_to event_round_path(@event, round),
                             method: :delete,
