--- a/app/views/weather_data/_table.html.haml
+++ b/app/views/weather_data/_table.html.haml
@@ -1,5 +1,5 @@
--# 't' is using instead of true, because it will be impossible to use ||= on
--# false value. it will set true every time.
+-# 't'/'f' is using instead of true/false, because it will be impossible
+-# to use ||= on false value. it will set true every time.
 - editable ||= 't'
 - except_columns ||= []
 
