--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -16,25 +16,6 @@
             %i.fa.fa-fw.fa-facebook-square
             = t('application.footer.fb_page')
           |
-          %a{href: 'mailto:ab@ipkunin.ru'}
+          %a{href: 'mailto:skyksandr@gmail.com'}
             %i.fa.fa-fw.fa-mail-forward
-            = 'ab@ipkunin.ru'
-        -# .col-sm-4
-        -#   %p= t('static_pages.index.stats')
-        -#   %p
-        -#     = t('static_pages.index.stats_tracks') + ' ' + Track.all.size.to_s
-        -#     %br
-        -#     = t('static_pages.index.stats_pilots') + ' ' + User.all.size.to_s
-        -# .col-sm-4
-        -#   %p
-        -#     %a{href: about_path}
-        -#       %i.fa.fa-fw.fa-info
-        -#       = t('application.header.about')
-        -#     %br
-        -#     %a{href: 'https://www.facebook.com/skyderby.ru'}
-        -#       %i.fa.fa-fw.fa-facebook-square
-        -#       = t('application.footer.fb_page')
-        -#     %br
-        -#     %a{href: 'mailto:ab@ipkunin.ru'}
-        -#       %i.fa.fa-fw.fa-mail-forward
-        -#       = 'ab@ipkunin.ru'
+            = 'skyksandr@gmail.com'
