fixed weather modal open on manual entry tab

--- a/app/views/weather_data/track_weathers/_track_weather.html.haml
+++ b/app/views/weather_data/track_weathers/_track_weather.html.haml
@@ -13,5 +13,5 @@
 .tab-content
   #place_weather_data.tab-pane{class: ('active' if has_place_weather), role: 'tabpanel'}
     = render 'weather_data/table', weather_data: @weather_data.place_weather_data, editable: 'f', except_columns: [:actual_on]
-  #track_weather_data.tab-pane{role: 'tabpanel'}
+  #track_weather_data.tab-pane{class: ('active' if !has_place_weather), role: 'tabpanel'}
     = render 'weather_data/table', weather_data: @weather_data.track_weather_data, except_columns: [:actual_on]
