--- a/app/assets/stylesheets/mobile/_content_block.scss
+++ b/app/assets/stylesheets/mobile/_content_block.scss
@@ -2,6 +2,7 @@
   background-color: white;
   border: rgba(0, 0, 0, 0.14) solid 1px;
   border-radius: 2px;
+  margin-top: 5px;
 
   .bottom-btn {
     color: #777777;
