--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -2,6 +2,8 @@
  *= require bootstrap_and_overrides
 */
 
-@import '../flags';
 @import '../ajax_error_message';
+@import '../flags';
+@import '../tables';
+
 @import '**/*';
