track show mobile view

--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -1,5 +1,7 @@
 /*
  *= require bootstrap_and_overrides
+ *= require ion.rangeSlider
+ *= require ion.rangeSlider.skinFlat
 */
 
 @import '../ajax_error_message';
