--- a/app/views/tracks/_charts.html.haml
+++ b/app/views/tracks/_charts.html.haml
@@ -1,4 +1,4 @@
-#track-charts
+.track-charts__charts-container
   - if preferred_charts_mode == 'separate'
     #glideratio_chart
     #speeds_chart
