--- a/app/views/tracks/_separate_charts.js.erb
+++ b/app/views/tracks/_separate_charts.js.erb
@@ -1,14 +1,15 @@
-$('#glideratio_chart').highcharts(<%= render(template: 'charts/glide_ratio_options').html_safe %>);
+<% mobile ||= false %>
+$('#glideratio_chart').highcharts(<%= render(template: 'charts/glide_ratio_options', locals: { mobile: mobile }).html_safe %>);
 $('#glideratio_chart').highcharts().series[0].setData(<%= presenter.glide_ratio_chart_line %>);
 
-$('#speeds_chart').highcharts(<%= render(template: 'charts/speeds_chart_options', locals: {speed_units: presenter.speed_units}).html_safe %>);
+$('#speeds_chart').highcharts(<%= render(template: 'charts/speeds_chart_options', locals: { speed_units: presenter.speed_units, mobile: mobile }).html_safe %>);
 $('#speeds_chart').highcharts().series[0].setData(<%= presenter.ground_speed_chart_line %>, false);
 $('#speeds_chart').highcharts().series[1].setData(<%= presenter.vertical_speed_chart_line %>, false);
 $('#speeds_chart').highcharts().series[2].setData(<%= presenter.full_speed_chart_line %>);
 
-$('#elevation_distance_chart').highcharts(<%= render(template: 'charts/elevation_chart_options', locals: {distance_units: presenter.distance_units, altitude_units: presenter.altitude_units}).html_safe %>);
+$('#elevation_distance_chart').highcharts(<%= render(template: 'charts/elevation_chart_options', locals: {distance_units: presenter.distance_units, altitude_units: presenter.altitude_units, mobile: mobile}).html_safe %>);
 $('#elevation_distance_chart').highcharts().series[0].setData(<%= presenter.elevation_chart_line %>, false);
 $('#elevation_distance_chart').highcharts().series[1].setData(<%= presenter.distance_chart_line %>, false);
 $('#elevation_distance_chart').highcharts().series[2].setData(<%= presenter.altitude_chart_line %>);
 
-$('#track-charts').on('mousemove touchmove touchstart', Skyderby.helpers.shared_tooltip_handler);
+$('.track-charts__charts-container').on('mousemove touchmove touchstart', Skyderby.helpers.shared_tooltip_handler);
