fixed load more button, fixed settings button style

--- a/app/assets/stylesheets/mobile/pages/tracks/_track_charts.scss
+++ b/app/assets/stylesheets/mobile/pages/tracks/_track_charts.scss
@@ -11,6 +11,8 @@
   color: rgb(102, 102, 102);
   text-align: right;
   button {
+    -webkit-appearance: none;
+    border-radius: 0;
     text-transform: uppercase;
   }
 }
