reduced image size, removed button border, add js+mobile track index

--- a/app/assets/stylesheets/mobile/pages/tracks/_track_charts.scss
+++ b/app/assets/stylesheets/mobile/pages/tracks/_track_charts.scss
@@ -13,6 +13,7 @@
   button {
     -webkit-appearance: none;
     border-radius: 0;
+    border-color: transparent;
     text-transform: uppercase;
   }
 }
