improvements to tracks index layout

--- a/app/views/tracks/index.mobile.haml
+++ b/app/views/tracks/index.mobile.haml
@@ -1,20 +1,16 @@
-.container
-  .tracks-index.top-buffer
-    = render 'filters'
+.tracks-index
+  = render 'filters'
 
-    .content-block
-      .content-container
-        .row
-          .col-sm-12
-            #tracks-table.table.table-hover
-              .thead
-                = render 'table_header'
-              .tbody
-                = render @tracks
+  .tracks-index__table-container
+    #tracks-table.table.table-hover
+      .thead
+        = render 'table_header'
+      .tbody
+        = render @tracks
 
-    .text-center.top-buffer
-      .pagination-load-more
-        = will_paginate @tracks, renderer: WillPaginateLoadMoreRenderer
-      .pagination-list
-        = will_paginate @tracks, renderer: BootstrapPagination::Rails
+  .tracks-index__pagination
+    .pagination-load-more
+      = will_paginate @tracks, renderer: WillPaginateLoadMoreRenderer
+    .pagination-list
+      = will_paginate @tracks, renderer: BootstrapPagination::Rails
 
