--- a/app/views/layouts/application.html+mobile.haml
+++ b/app/views/layouts/application.html+mobile.haml
@@ -13,7 +13,7 @@
     %meta{property: 'og:image:width', content: '260'}
     %meta{property: 'og:image:height', content: '260'}
 
-    %meta{name:"viewport", content:'width=device-width, initial-scale=1'}
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"}
 
     = render 'layouts/favicon'
     = render 'layouts/google_analytics'
